# k3s-virtual-machine

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh
allocator/: CMakeLists.txt  allocator.cpp  allocator.h  containers.h  gc.h  gc_region.cpp  gc_region.h  object_header.h  region.h
assembler/: CMakeLists.txt  assembler.cpp  assembler.h  main.cpp
assembler/templates/: grammar.l.erb  isa_parser.rb  lexer.l.erb  opcodes.h.erb
assembler/tests/: test.k3s
benchmarks/: bench.py  fibbonaci.k3s  mean.k3s  objects.k3s  strings.k3s
build_dev/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  fib.b3s
build_dev/assembler/: cmake_install.cmake
build_dev/classfile/: cmake_install.cmake
build_dev/interpreter/: cmake_install.cmake
classfile/: CMakeLists.txt  class_file.cpp  class_file.h
common/: macro.h
interpreter/: CMakeLists.txt  bytecode_instruction.h  handlers.inl  interpreter.cpp  interpreter.h  register.cpp  register.h
interpreter/templates/: dispatch_table.inl.erb  dispatch_table_single.inl.erb  inst_decoder.cpp.erb  inst_decoder.h.erb  opcodes.h.erb  reg_types.inl.erb
interpreter/types/: array.h  coretypes.h  function.h  object.h  string.h
isa/: isa.yaml  isa_parser.rb
runtime/: CMakeLists.txt  main.cpp  runtime.cpp  runtime.h
testgen/: CMakeLists.txt  main.cpp  main.rb  runtime_image.cpp  runtime_image.h
testgen/klee/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  bench.py  objects.k3s
